adds few shot prompt

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -488,7 +488,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_5_source_IPs = pandas_ai(mirai_df, prompt='Which are the 5 most popular source IP addresses?')\n",
+    "top_5_source_IPs = pandas_ai(\n",
+    "    mirai_df, prompt=\"Which are the 5 most popular source IP addresses?\"\n",
+    ")\n",
     "top_5_source_IPs"
    ]
   },
@@ -498,7 +500,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_5_dst_ports = pandas_ai(mirai_df, prompt='Which are the 5 most popular destination ports?')\n",
+    "top_5_dst_ports = pandas_ai(\n",
+    "    mirai_df, prompt=\"Which are the 5 most popular destination ports?\"\n",
+    ")\n",
     "top_5_dst_ports"
    ]
   },
@@ -508,7 +512,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pandas_ai.run(mirai_stream_df, prompt=\"Plot the scatter plot of stream durations and number of packets.\")"
+    "pandas_ai.run(\n",
+    "    mirai_stream_df,\n",
+    "    prompt=\"Plot the scatter plot of stream durations and number of packets.\",\n",
+    ")"
    ]
   },
   {
@@ -756,7 +763,9 @@
    "outputs": [],
    "source": [
     "# concatenate dataframes\n",
-    "data_df = pd.concat([mirai_stream_df_numeric, benign_stream_df_numeric], ignore_index=True)"
+    "data_df = pd.concat(\n",
+    "    [mirai_stream_df_numeric, benign_stream_df_numeric], ignore_index=True\n",
+    ")"
    ]
   },
   {
@@ -821,6 +830,7 @@
    "source": [
     "# randomize the data. TODO: is this needed\n",
     "from sklearn.utils import shuffle\n",
+    "\n",
     "data_df = shuffle(data_df)"
    ]
   },
@@ -875,6 +885,7 @@
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsRegressor\n",
+    "\n",
     "knn_model = KNeighborsRegressor(n_neighbors=3)"
    ]
   },
@@ -885,6 +896,7 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
     "rf_model = RandomForestClassifier(max_depth=2, random_state=0)"
    ]
   },
@@ -895,7 +907,10 @@
    "outputs": [],
    "source": [
     "from xgboost import XGBClassifier\n",
-    "xgb_model = XGBClassifier(n_estimators=2, max_depth=2, learning_rate=1, objective='binary:logistic')"
+    "\n",
+    "xgb_model = XGBClassifier(\n",
+    "    n_estimators=2, max_depth=2, learning_rate=1, objective=\"binary:logistic\"\n",
+    ")"
    ]
   },
   {
@@ -909,13 +924,13 @@
     "    for train, test in kfold.split(X):\n",
     "        X_train, X_test = X.iloc[train], X.iloc[test]\n",
     "        y_train, y_test = y.iloc[train], y.iloc[test]\n",
-    "        \n",
+    "\n",
     "        model.fit(X_train, y_train)\n",
-    "        \n",
+    "\n",
     "        # evaluate model accuracy\n",
     "        accuracy = model.score(X_test, y_test)\n",
     "        accuracy_scores.append(accuracy)\n",
-    "        \n",
+    "\n",
     "    return accuracy_scores"
    ]
   },
@@ -935,8 +950,8 @@
    "outputs": [],
    "source": [
     "# add labels, 0 for benign, 1 for malicious\n",
-    "mirai_cleaned_df[\"Labels\"] = 1\n",
-    "benign_clean_df[\"Labels\"] = 0"
+    "mirai_cleaned_df[\"Labels\"] = \"positive\"\n",
+    "benign_clean_df[\"Labels\"] = \"negative\""
    ]
   },
   {
@@ -964,8 +979,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = payloads[\"Payload\"]\n",
-    "y = payloads[\"Labels\"]"
+    "# TODO: use sample\n",
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "payloads = shuffle(payloads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use a subset because this takes loooong!\n",
+    "X = payloads[\"Payload\"].head(100)\n",
+    "y = payloads[\"Labels\"].head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape"
    ]
   },
   {
@@ -986,9 +1023,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: DynamicFewShotGPTClassifier, FewShotGPTClassifier\n",
     "from skllm import ZeroShotGPTClassifier\n",
     "\n",
-    "clf = ZeroShotGPTClassifier(openai_model=\"gpt4all::ggml-gpt4all-j-v1.3-groovy\")\n",
+    "clf = ZeroShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
     "clf.fit(X, y)\n",
     "labels = clf.predict(X)"
    ]
@@ -999,7 +1037,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "print(f\"Accuracy: {accuracy_score(y, labels):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skllm import FewShotGPTClassifier\n",
+    "\n",
+    "clf = FewShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
+    "clf.fit(X, y)\n",
+    "labels = clf.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy_score(y, labels):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skllm import DynamicFewShotGPTClassifier\n",
+    "\n",
+    "clf = DynamicFewShotGPTClassifier(n_examples=3)\n",
+    "clf.fit(X, y)\n",
+    "labels = clf.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = DynamicFewShotGPTClassifier(n_examples=3)\n",
+    "clf.fit(X, y)\n",
+    "labels = clf.predict(X)"
    ]
   },
   {
@@ -1073,7 +1161,6 @@
    "outputs": [],
    "source": [
     "def model_evaluation(model, X, y, k, scorer):\n",
-    "\n",
     "    # Perform k-fold cross-validation and calculate precision scores\n",
     "    # precision_scores = cross_val_score(model, X, y, cv=k, scoring=scorer)\n",
     "    model_scores = cross_val_score(model, X, y, cv=k)\n",
@@ -1081,7 +1168,7 @@
     "    # Calculate the average score across all folds\n",
     "    average_score = model_scores.mean()\n",
     "\n",
-    "    return average_precision\n"
+    "    return average_precision"
    ]
   },
   {
@@ -1095,7 +1182,7 @@
     "\n",
     "# Assuming model is your trained model and X, y are the input features and labels respectively\n",
     "# Set the scoring metric to precision\n",
-    "scorer = make_scorer(precision_score)\n"
+    "scorer = make_scorer(precision_score)"
    ]
   },
   {
@@ -1204,12 +1291,12 @@
     "    for train, test in kfold.split(X):\n",
     "        X_train, X_test = X.iloc[train], X.iloc[test]\n",
     "        y_train, y_test = y.iloc[train], y.iloc[test]\n",
-    "        \n",
+    "\n",
     "        model.fit(X_train, y_train)\n",
     "        y_pred = model.predict(X_test)\n",
-    "        \n",
+    "\n",
     "        cm = confusion_matrix(y_test, y_pred)\n",
-    "        \n",
+    "\n",
     "        # Create a heatmap of the confusion matrix\n",
     "        sns.heatmap(cm, annot=True, cmap=\"Blues\")\n",
     "        plt.xlabel(\"Predicted labels\")\n",
@@ -1234,7 +1321,7 @@
    "source": [
     "## ROC curve\n",
     "\n",
-    "TODO"
+    "Use pandas ai ROC curve"
    ]
   }
  ],
