restructures and adds roc curve

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -17,13 +17,19 @@
     "from pandasai import PandasAI\n",
     "from scapy.all import PcapReader, IP, TCP, UDP, ICMP\n",
     "from scipy.stats import ttest_ind, kstest, norm, skew, kurtosis, zscore\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.utils import shuffle\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import KFold\n",
-    "\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.metrics import accuracy_score, make_scorer, precision_score, recall_score, confusion_matrix\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from skllm.config import SKLLMConfig\n",
+    "from skllm import ZeroShotGPTClassifier, FewShotGPTClassifier, DynamicFewShotGPTClassifier\n",
     "from skimpy import skim\n",
     "from summarytools import dfSummary\n",
-    "from gensim.models import Word2Vec\n",
-    "from gensim.utils import simple_preprocess"
+    "from xgboost import XGBClassifier\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -86,6 +92,7 @@
     "        else:\n",
     "            src_ip = None\n",
     "            dst_ip = None\n",
+    "\n",
     "            protocol = None\n",
     "\n",
     "        # Get the source and destination ports and payload\n",
@@ -828,9 +835,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# randomize the data. TODO: is this needed\n",
-    "from sklearn.utils import shuffle\n",
-    "\n",
+    "# randomize the data. TODO: is this needed??\n",
     "data_df = shuffle(data_df)"
    ]
   },
@@ -884,8 +889,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "\n",
+    "# K-Nearest Neighbors\n",
     "knn_model = KNeighborsRegressor(n_neighbors=3)"
    ]
   },
@@ -895,8 +899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
+    "# Random Forest Classifier\n",
     "rf_model = RandomForestClassifier(max_depth=2, random_state=0)"
    ]
   },
@@ -906,8 +909,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xgboost import XGBClassifier\n",
-    "\n",
+    "# XGBoost\n",
     "xgb_model = XGBClassifier(\n",
     "    n_estimators=2, max_depth=2, learning_rate=1, objective=\"binary:logistic\"\n",
     ")"
@@ -932,162 +934,6 @@
     "        accuracy_scores.append(accuracy)\n",
     "\n",
     "    return accuracy_scores"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## AI \n",
-    "Use llm for classification. Can only use payload that is words."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add labels, 0 for benign, 1 for malicious\n",
-    "mirai_cleaned_df[\"Labels\"] = \"positive\"\n",
-    "benign_clean_df[\"Labels\"] = \"negative\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mirai_payloads = mirai_cleaned_df[[\"Payload\", \"Labels\"]]\n",
-    "benign_payloads = benign_clean_df[[\"Payload\", \"Labels\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "payloads = pd.concat([mirai_payloads, benign_payloads], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: use sample\n",
-    "from sklearn.utils import shuffle\n",
-    "\n",
-    "payloads = shuffle(payloads)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# use a subset because this takes loooong!\n",
-    "X = payloads[\"Payload\"].head(100)\n",
-    "y = payloads[\"Labels\"].head(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skllm.config import SKLLMConfig\n",
-    "\n",
-    "SKLLMConfig.set_openai_key(openai_api_key)\n",
-    "SKLLMConfig.set_openai_org(\"org-HlcxSARQUphcO0tUGmtJJOpD\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: DynamicFewShotGPTClassifier, FewShotGPTClassifier\n",
-    "from skllm import ZeroShotGPTClassifier\n",
-    "\n",
-    "clf = ZeroShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
-    "clf.fit(X, y)\n",
-    "labels = clf.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "print(f\"Accuracy: {accuracy_score(y, labels):.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skllm import FewShotGPTClassifier\n",
-    "\n",
-    "clf = FewShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
-    "clf.fit(X, y)\n",
-    "labels = clf.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "print(f\"Accuracy: {accuracy_score(y, labels):.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skllm import DynamicFewShotGPTClassifier\n",
-    "\n",
-    "clf = DynamicFewShotGPTClassifier(n_examples=3)\n",
-    "clf.fit(X, y)\n",
-    "labels = clf.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = DynamicFewShotGPTClassifier(n_examples=3)\n",
-    "clf.fit(X, y)\n",
-    "labels = clf.predict(X)"
    ]
   },
   {
@@ -1168,7 +1014,7 @@
     "    # Calculate the average score across all folds\n",
     "    average_score = model_scores.mean()\n",
     "\n",
-    "    return average_precision"
+    "    return average_score"
    ]
   },
   {
@@ -1177,9 +1023,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import make_scorer, precision_score, recall_score\n",
-    "\n",
     "# Assuming model is your trained model and X, y are the input features and labels respectively\n",
     "# Set the scoring metric to precision\n",
     "scorer = make_scorer(precision_score)"
@@ -1192,7 +1035,7 @@
    "outputs": [],
    "source": [
     "# TODO: how do we calculate precision for knn?\n",
-    "# print(\"Average Precision knn:\", model_evaluation(knn_model, X, y, k, scorer))"
+    "print(\"Average Precision knn:\", model_evaluation(knn_model, X, y, k, scorer))"
    ]
   },
   {
@@ -1201,7 +1044,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(\"Average Precision random forest:\", model_evaluation(rf_model, X, y, k, scorer))"
+    "print(\"Average Precision random forest:\", model_evaluation(rf_model, X, y, k, scorer))"
    ]
   },
   {
@@ -1275,19 +1118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.metrics import confusion_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def plot_confusion_matrix(model, X, y):\n",
-    "    accuracy_scores = []\n",
     "    for train, test in kfold.split(X):\n",
     "        X_train, X_test = X.iloc[train], X.iloc[test]\n",
     "        y_train, y_test = y.iloc[train], y.iloc[test]\n",
@@ -1322,6 +1153,158 @@
     "## ROC curve\n",
     "\n",
     "Use pandas ai ROC curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_ROC_curve(model, X, y):\n",
+    "    for train, test in kfold.split(X):\n",
+    "        X_train, X_test = X.iloc[train], X.iloc[test]\n",
+    "        y_train, y_test = y.iloc[train], y.iloc[test]\n",
+    "\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "\n",
+    "        # Create roc curve with pandas ai\n",
+    "        pandas_ai.plot_roc_curve(X, y_test, y_pred)\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_ROC_curve(xgb_model, X, y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AI Classifier \n",
+    "Use llm for classification. Can only use payload that is words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add labels, 0 for benign, 1 for malicious\n",
+    "mirai_cleaned_df[\"Labels\"] = 1\n",
+    "benign_clean_df[\"Labels\"] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_payloads = mirai_cleaned_df[[\"Payload\", \"Labels\"]]\n",
+    "benign_payloads = benign_clean_df[[\"Payload\", \"Labels\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "payloads = pd.concat([mirai_payloads, benign_payloads], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: use sample\n",
+    "payloads = shuffle(payloads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use a subset because this takes loooong!\n",
+    "X_llm = payloads[\"Payload\"].head(20)\n",
+    "y_llm = payloads[\"Labels\"].head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_llm.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SKLLMConfig.set_openai_key(openai_api_key)\n",
+    "SKLLMConfig.set_openai_org(\"org-HlcxSARQUphcO0tUGmtJJOpD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: DynamicFewShotGPTClassifier errors out, why?\n",
+    "def ai_classify(classifier, X, Y):\n",
+    "    classifier.fit(X, y)\n",
+    "    labels = classifier.predict(X)\n",
+    "    return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier = ZeroShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
+    "labels = ai_classify(classifier, X_llm, y_llm)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy_score(y_llm, labels):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = FewShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
+    "clf.fit(X_llm, y_llm)\n",
+    "labels = clf.predict(X_llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Accuracy: {accuracy_score(y_llm, labels):.2f}\")"
    ]
   }
  ],
