content for readme, fixes scorer

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -13,23 +13,41 @@
     "import os\n",
     "\n",
     "from dotenv import load_dotenv\n",
-    "from pandasai.llm.openai import OpenAI\n",
-    "from pandasai import PandasAI\n",
     "from scapy.all import PcapReader, IP, TCP, UDP, ICMP\n",
     "from scipy.stats import ttest_ind, kstest, norm, skew, kurtosis, zscore\n",
+    "from summarytools import dfSummary\n",
+    "from xgboost import XGBClassifier\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from skimpy import skim\n",
+    "\n",
+    "# pandasai imports\n",
+    "from pandasai.llm.openai import OpenAI\n",
+    "from pandasai import PandasAI\n",
+    "\n",
+    "# scikit learn imports\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.utils import shuffle\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.metrics import accuracy_score, make_scorer, precision_score, recall_score, confusion_matrix\n",
-    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    make_scorer,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    confusion_matrix,\n",
+    "    roc_curve,\n",
+    "    auc,\n",
+    ")\n",
+    "from sklearn.model_selection import KFold, cross_val_score, train_test_split\n",
+    "\n",
+    "# scikit llm imports\n",
     "from skllm.config import SKLLMConfig\n",
-    "from skllm import ZeroShotGPTClassifier, FewShotGPTClassifier, DynamicFewShotGPTClassifier\n",
-    "from skimpy import skim\n",
-    "from summarytools import dfSummary\n",
-    "from xgboost import XGBClassifier\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "from skllm import (\n",
+    "    ZeroShotGPTClassifier,\n",
+    "    FewShotGPTClassifier,\n",
+    "    DynamicFewShotGPTClassifier,\n",
+    ")"
    ]
   },
   {
@@ -241,6 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: run late night to get result\n",
     "mirai_cleaned_df"
    ]
   },
@@ -251,6 +270,26 @@
    "outputs": [],
    "source": [
     "benign_clean_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_cleaned_df.to_pickle(\"data/mirai_cleaned.pkl\")\n",
+    "benign_clean_df.to_pickle(\"data/benign_cleaned.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_cleaned_df = pd.read_pickle(\"data/mirai_cleaned.pkl\")\n",
+    "benign_clean_df = pd.read_pickle(\"data/benign_cleaned.pkl\")"
    ]
   },
   {
@@ -652,34 +691,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mirai_subset_df = mirai_df.loc[:1000]\n",
-    "benign_subset_df = benign_df.loc[:1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pandas_ai.generate_features(mirai_subset_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pandas_ai.generate_features(benign_subset_df)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -730,7 +741,7 @@
    "outputs": [],
    "source": [
     "my_report = sv.analyze(mirai_stream_df_numeric)\n",
-    "my_report.show_html()"
+    "my_report.show_html(filepath=\"html/mirai_stream.html\")"
    ]
   },
   {
@@ -740,7 +751,7 @@
    "outputs": [],
    "source": [
     "my_report = sv.analyze(benign_stream_df_numeric)\n",
-    "my_report.show_html()"
+    "my_report.show_html(filepath=\"html/benign_stream.html\")"
    ]
   },
   {
@@ -1008,8 +1019,7 @@
    "source": [
     "def model_evaluation(model, X, y, k, scorer):\n",
     "    # Perform k-fold cross-validation and calculate precision scores\n",
-    "    # precision_scores = cross_val_score(model, X, y, cv=k, scoring=scorer)\n",
-    "    model_scores = cross_val_score(model, X, y, cv=k)\n",
+    "    model_scores = cross_val_score(model, X, y, cv=k, scoring=scorer)\n",
     "\n",
     "    # Calculate the average score across all folds\n",
     "    average_score = model_scores.mean()\n",
@@ -1035,7 +1045,7 @@
    "outputs": [],
    "source": [
     "# TODO: how do we calculate precision for knn?\n",
-    "print(\"Average Precision knn:\", model_evaluation(knn_model, X, y, k, scorer))"
+    "# print(\"Average Precision knn:\", model_evaluation(knn_model, X, y, k, scorer))"
    ]
   },
   {
@@ -1161,17 +1171,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_ROC_curve(model, X, y):\n",
-    "    for train, test in kfold.split(X):\n",
-    "        X_train, X_test = X.iloc[train], X.iloc[test]\n",
-    "        y_train, y_test = y.iloc[train], y.iloc[test]\n",
+    "def split_data(model, X, y):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, test_size=0.2, random_state=42\n",
+    "    )\n",
+    "    model.fit(X_train, y_train)\n",
+    "    # y_pred = model.predict(X_test)\n",
+    "    y_score = model.predict_proba(X_test)\n",
     "\n",
-    "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)\n",
-    "\n",
-    "        # Create roc curve with pandas ai\n",
-    "        pandas_ai.plot_roc_curve(X, y_test, y_pred)\n",
-    "       "
+    "    # return X_test, y_test, y_pred\n",
+    "    return y_test, y_score"
    ]
   },
   {
@@ -1180,7 +1189,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_ROC_curve(xgb_model, X, y)"
+    "# X_test, y_test, y_pred = split_data(knn_model, X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ERROR: numpy.ndarrayThis model's maximum context length is 4097 tokens. \n",
+    "# However, your messages resulted in 26146 tokens. Please reduce the length of the messages.\n",
+    "# pandas_ai.plot_roc_curve(X_test, y_test.tolist(), y_pred.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test, y_score = split_data(rf_model, X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_roc_curve(y_test, y_score):\n",
+    "    # Calculate the false positive rate, true positive rate, and thresholds for the ROC curve\n",
+    "    fpr, tpr, thresholds = roc_curve(y_test, y_score)\n",
+    "    roc_auc = auc(fpr, tpr)\n",
+    "\n",
+    "    # Plot the ROC curve\n",
+    "    plt.plot(fpr, tpr, label=\"ROC curve (AUC = %0.2f)\" % roc_auc)\n",
+    "    plt.plot([0, 1], [0, 1], \"k--\")  # Random guessing line\n",
+    "    plt.xlabel(\"False Positive Rate\")\n",
+    "    plt.ylabel(\"True Positive Rate\")\n",
+    "    plt.title(\"Receiver Operating Characteristic (ROC)\")\n",
+    "    plt.legend(loc=\"lower right\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_roc_curve(y_test, y_score[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test, y_score = split_data(xgb_model, X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_roc_curve(y_test, y_score[:, 1])"
    ]
   },
   {
@@ -1269,10 +1346,10 @@
    "outputs": [],
    "source": [
     "# TODO: DynamicFewShotGPTClassifier errors out, why?\n",
-    "def ai_classify(classifier, X, Y):\n",
-    "    classifier.fit(X, y)\n",
-    "    labels = classifier.predict(X)\n",
-    "    return labels"
+    "# def ai_classify(classifier, X, Y):\n",
+    "#     classifier.fit(X, y)\n",
+    "#     labels = classifier.predict(X)\n",
+    "#     return labels"
    ]
   },
   {
@@ -1281,8 +1358,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier = ZeroShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
-    "labels = ai_classify(classifier, X_llm, y_llm)\n",
+    "clf = ZeroShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
+    "clf.fit(X_llm, y_llm)\n",
+    "labels = clf.predict(X_llm)\n",
     "\n",
     "print(f\"Accuracy: {accuracy_score(y_llm, labels):.2f}\")"
    ]
